poke/testsuite/poke.pkl/printf-diag-15.pk
/* { dg-do compile} */

printf "foo%Ti32d", 12; /* { dg-error "invalid flag" } */
